# reference-contracts

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr-any.yml  ubuntu-2004.yml
contracts/eosio.system/: CMakeLists.txt
contracts/eosio.system/native/: CMakeLists.txt  main.cpp
contracts/eosio.system/src/: eosio.system.cpp  powerup.cpp  producer_pay.cpp
contracts/eosio.token/native/: CMakeLists.txt  main.cpp
newtests/: CMakeLists.txt
newtests/contracts/activate/: CMakeLists.txt
newtests/contracts/activate/src/: activate.cpp
newtests/src/: base58.cpp  generated.h.in  permission.hpp  test.h  test_symbol.hpp  test_system.cpp  test_token.cpp
